fleet/overlays/manifest/istio/gateway.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: mygraph-gateway
    namespace: istio-system
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
      - renlm.cn
      - www.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
    - port:
        number: 443
        protocol: HTTPS
        name: tls
      hosts:
      - kubernetes.renlm.cn
      tls:
        mode: PASSTHROUGH
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
      - renlm.cn
      - www.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
      tls:
        mode: SIMPLE
        credentialName: istio-system.renlm.cn
        minProtocolVersion: TLSV1_2
    - port:
        number: 6379
        protocol: TCP
        name: redis
      hosts:
      - redis.renlm.cn
    - port:
        number: 3306
        protocol: TCP
        name: mysql
      hosts:
      - mysql.renlm.cn
    - port:
        number: 5672
        protocol: TCP
        name: amqp
      hosts:
      - rabbitmq.renlm.cn
